...
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="i7l-Cm-eFq">
                                <rect key="frame" x="141.5" y="323" width="131" height="109"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y07-yK-vIs">
                                        <rect key="frame" x="0.0" y="0.0" width="131" height="33"/>
                                        <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                        <state key="normal" title="Log in"/>
                                        <connections>
                                            <action selector="logIn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="IM3-nf-Wyr"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3t3-qq-dOs">
                                        <rect key="frame" x="0.0" y="41" width="131" height="30"/>
...
                            <constraint firstItem="i7l-Cm-eFq" firstAttribute="top" secondItem="4WF-jK-s7Q" secondAttribute="bottom" constant="7.5" id="gpU-jS-eH0"/>
                        </constraints>
                    </view>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" id="6JB-tN-HBL"/>
                    <connections>
                        <outlet property="clientIdField" destination="BxJ-uw-0ZR" id="ily-M9-7g2"/>
                        <outlet property="issuerField" destination="kXk-Cn-yoW" id="Ito-I0-Q7K"/>
                        <outlet property="redirectField" destination="ZSr-Pi-X8m" id="2lB-bD-blw"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="29" y="234"/>
        </scene>
        <!--Token-->
        <scene sceneID="fd9-4i-pSv">
            <objects>
                <viewController storyboardIdentifier="TokenResult" title="Token" id="ZK5-dB-Die" customClass="TokenResultViewController" customModule="OktaIdxExample" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="1Mg-FP-f9i">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" layoutMarginsFollowReadableWidth="YES" contentInsetAdjustmentBehavior="always" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="j3a-6M-DNV">
                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
...
