//
// Copyright (c) 2022-Present, Okta, Inc. and/or its affiliates. All rights reserved.
// The Okta software accompanied by this notice is provided pursuant to the Apache License, Version 2.0 (the "License.")
//
// You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0.
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
// WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
//
// See the License for the specific language governing permissions and limitations under the License.
//

import Foundation
import ArgumentParser
import OAuth2Auth

typealias Command = AsyncParsableCommand

@main
struct UserPasswordSignIn: Command {
    @Option(help: "The application's issuer URL.")
    var issuer: String
    
    @Option(help: "The application's client ID.")
    var clientId: String
    
    @Option(help: "The scopes to use.")
    var scope: String = "openid profile"
    
    @Option(help: "Username to use")
    var username: String?
    
    @Option(help: "Password")
    var password: String?
    
    mutating func run() async throws {
        guard #available(macOS 12, *) else {
            print("'user-password-sign-in' isn't supported on this platform.")
            return
        }
        
        let flow = try createFlow()
        let token = try await flow.start(username: try promptUsername(),
                                         password: try promptPassword())
        printUserInfo(using: token)
    }
}
